Add social link to website

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ github_username: "snipaid-nlg"
 #pinterest_username: username
 #youtube_username: username
 #googleplus_username: +username
+website: snipaid.tech
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
