Show post excerpts

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ website: snipaid.tech
 #########################################################################################
 theme: "minima"
 
+show_excerpts: true
+
 rss: rss
 
 kramdown:
