--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "News Snippet Generation"
 author: 
-- SnipAId Team
+- The SnipAId Team
 - Hannah Greven
 - Benjamin Rech
 description: "A Learning Journey on Open Source Large Language Models and how to assist journalists with generative AI in German" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
@@ -17,7 +17,11 @@ github_username: "snipaid-nlg"
 #pinterest_username: username
 #youtube_username: username
 #googleplus_username: +username
-demo_website: snipaid.tech
+
+# Custom Demo website
+demo_website: 
+   name: snipaid.tech
+   url: https://snipaid.tech
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
