Revert "Update social links"
This reverts commit 99caf6bdcdb4d01587e9c9280dce9ad66367f15a.

--- a/_config.yml
+++ b/_config.yml
@@ -7,23 +7,16 @@ description: "A Learning Journey on Open Source Large Language Models and how to
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-social_links:
-  #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
-  #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-  #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
-  #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-     - { platform: github,         user_url: "https://github.com/snipaid-nlg",      title: snipaid-nlg }
-  #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-  #   - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
-  #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-  #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
-  #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
-  #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
-  #   - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
-  #   - { platform: telegram,       user_url: "https://t.me/jekyll" }
-  #   - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
-     - { platform: website,        user_url: "https://snipaid.tech",     title: snipaid.tech}
-  #   - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+#email: "example@mail.com"
+#twitter_username: "twitteruser"
+github_username: "snipaid-nlg"
+#linkedin_username: "linkedinuser"
+#facebook_username: username
+#flickr_username: username
+#instagram_username: username
+#pinterest_username: username
+#youtube_username: username
+#googleplus_username: +username
 
 # Custom Demo website
 demo_website: 
